--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -70,12 +70,7 @@
                             <div class="assessment-welcome">
                                 <div class="content">
                                     <h3>Welcome to Assessment</h3>
-                                    <div>To start Inspection please choose assessment in tree view</div>
-                                    @* <p style="margin-top: 24px;">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nisl id tincidunt
-                                        aliquam, nunc nunc lacinia elit, nec tincidunt mauris nisl id nunc. Sed euismod, nisl id
-                                        tincidunt aliquam, nunc nunc lacinia elit, nec tincidunt mauris nisl id nunc.
-                                    </p> *@
+                                    <div>To start conducting assessment, please choose valve asset in the tree view.</div>
                                 </div>
                             </div>
                         </div>
