--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -47,12 +47,7 @@
                     <div class="tab-pane show active" role="tabpanel" id="welcome">
                         <div class="sub-container">
                             <h1>Welcome to Maintenance</h1>
-                            <p>To start Inspection please choose assessment in tree view</p>
-                            @* <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nisl id tincidunt
-                                aliquam, nunc nunc lacinia elit, nec tincidunt mauris nisl id nunc. Sed euismod, nisl id
-                                tincidunt aliquam, nunc nunc lacinia elit, nec tincidunt mauris nisl id nunc.
-                            </p> *@
+                            <p>To start adding maintenance data, please choose valve asset in the tree view.</p>
                         </div>
                     </div>
                     <div class="tab-pane show active" role="tabpanel" id="template_inspection">
